# safeheron-crypto-suites-cpp-sgx

./: .gitmodules  CMakeLists.txt  README.md
cmake/: SGXSafeheronCryptoSuitesConfig.cmake.in  SafeheronCryptoSuitesSgxConfig.cmake.in  setup_installation.cmake
